+mustafa | midway-fixing alignment and design in setting tabs

--- a/src/assets/css/style-1.css
+++ b/src/assets/css/style-1.css
@@ -669,7 +669,7 @@ header .navbar-nav>li.active {
 }
 
 .mrB {
-    margin-bottom: 5px;
+    margin-bottom: 5px !important;
 }
 
 .mrL {
@@ -753,7 +753,7 @@ header .navbar-nav>li.active {
 }
 
 .bdr {
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
 }
 
 .bdrN {
@@ -761,19 +761,19 @@ header .navbar-nav>li.active {
 }
 
 .bdrT {
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #ccc;
 }
 
 .bdrB {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ccc;
 }
 
 .bdrL {
-    border-left: 1px solid #ddd;
+    border-left: 1px solid #ccc;
 }
 
 .bdrR {
-    border-right: 1px solid #ddd !important;
+    border-right: 1px solid #ccc !important;
 }
 
 .bdrR0 {
@@ -2452,17 +2452,19 @@ i.cls-alert {
     float: left;
     display: inline-block;
     position: relative;
-    margin: 10px 10px 0 0;
-    padding: 10px;
-    color: #333;
-    background: #fff;
+    background: #f4f5f8;
     border-radius: 2px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.2s ease-in-out;
+    box-sizing: border-box;
+    margin: 7px;
+    transition: all 0.5s ease-in-out;
+    padding: 10px;
+    border: 1px solid rgba(251, 194, 168, 0.68);
 }
 
 .account-card:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    background: #fff;
+    box-shadow: 0 5px 14px 0 rgba(58, 58, 58, .18);
+    border-color: #d35f29;
 }
 
 .account-card>h1 {
@@ -2479,14 +2481,14 @@ i.cls-alert {
 
 .account-card>.balances>span.title {
     display: block;
-    color: #444;
+    color: #333;
 }
 
 .account-card>.balance {
-    color: #444;
+    color: #333;
     font-size: 24px;
-    padding: 5px 0;
-    line-height: 24px;
+    padding-bottom: 10px;
+    line-height: normal;
 }
 
 .account-card>.with {
@@ -2504,47 +2506,21 @@ i.cls-alert {
 
 .account-card .account-number,
 .account-card .account-date {
-    font-size: 12px;
+    font-size: 14px;
     margin: 5px 0;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.account-card .account-date>label {
+    color: #d25f29;
 }
 
 .account-card .account-date>a {
-    margin-left: 5px;
-    font-size: 12px;
-    color: green;
-    cursor: pointer;
     position: relative;
-}
-
-.account-card .account-date>a>input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    max-width: 100%;
     opacity: 0;
     cursor: pointer;
+    z-index: -999;
 }
-
-.account-card .refresh-icon {
-    color: green;
-    position: absolute;
-    right: 35px;
-    top: 12px;
-}
-
-
-/*.account-card .btn{
-    position: absolute;
-    bottom: 10px;
-}*/
-
-
-/*.account-card .select-account{
-    margin-top:45px;
-}
-*/
 
 .linked-accounts {
     width: 100%;
@@ -5052,7 +5028,7 @@ table.proforma-particulars {
 .box {
     padding: 20px;
     background-color: white;
-    margin: 20px 0;
+    /* margin: 20px 0; */
 }
 
 #settingTab .nav>li>a {
@@ -5172,4 +5148,9 @@ strong {
 .navbar-inverse .btn-link:focus,
 .navbar-inverse .btn-link:hover {
     color: #333;
+}
+
+b,
+strong {
+    font-family: 'LatoWebBold';
 }
